=====NEWS ABOUT TEA====
TEA 46.3.0, September 29, 2018
---------------------------------------
http://semiletov.org/tea - official size #1
http://tea.ourproject.org - official size #1
https://github.com/psemiletov/tea-qt - development
https://vk.com/teaeditor - VK-community
https://www.facebook.com/groups/766324686841748/ - FB-community
---------------------------------------
  
   Built-in calculator now supports ^ (power) and % (percents) operations. OS/2 compatibility has been fixed (thanks to Elbert Pol). Some IDE-related functions are fixed too.

   Stay tuned.
   Peter Semiletov