@@ -1,5 +1,5 @@
 ====НОВОСТИ ПРО ТИА====
-ТИА 46.3.0, 29 сентября 2018
+ТИА 47.0.0, 30 сентября 2018
 ---------------------------------------
 http://semiletov.org/tea - офсайт
 http://tea.ourproject.org - второй офсайт
@@ -8,6 +8,10 @@ https://vk.com/teaeditor - сообщество TEA
 https://www.facebook.com/groups/766324686841748/ - FB-сообщество
 ---------------------------------------
 
-   Встроенный калькулятор теперь поддерживает операции * и % (возведение в степень и процент). Совместимость с OS/2 возрождена благодаря Элберту Полу. Исправлены некоторые штуки, связанные с IDE.
+   Это большей частью "стабилизирующая" версия с разными исправлениями, однако хочу обратить внимание на следующее: 
+
+   Появилась подсветка Objective C, улучшена поддержка C/C++, Pascal.
+   Поиск текста в файлах теперь учитывает и файлы PDF и DJVU, если TEA собран с библиотеками их поддержки.
+   Улучшен рендеринг шрифтов.
 
    С кирпичным пролетарским приветом, Петр Семилетов!
